--- a/mainapp/static/css/bootstrap.css
+++ b/mainapp/static/css/bootstrap.css
@@ -513,7 +513,7 @@ mark {
 .img-fluid {
     max-width: 100%;
     height: 200px;
-    background-size: cover;
+    background-size: contain;
 }
 
 .img-thumbnail {
