--- a/templates/mainapp/index.html
+++ b/templates/mainapp/index.html
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand logo_h" href="index.html"
+            <a class="navbar-brand logo_h"
               ><img src={% static "img/logo.png" %} alt=""
             /></a>
             <button
@@ -123,7 +123,7 @@
                 </div>
                 <div class="course_content">
                   <span class="tag mb-4 d-inline-block">{{subject.duration}} месяцев</span>
-                  <h4 class="mb-3">
+                  <h4 class="mb-3" style="height: 40px;">
                     <a href={% url "subject_detail" subject.id %}>{{subject.subject_name}}</a>
                   </h4>
                   <p>
