--- a/templates/mainapp/subject_detail.html
+++ b/templates/mainapp/subject_detail.html
@@ -46,7 +46,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
               <img class="logo-2" src={% static "img/logo2.png" %} alt="" />
             </a>
             <button
